[gd_scene load_steps=3 format=2]

[ext_resource path="res://Brker.gd" type="Script" id=1]
[ext_resource path="res://Gr√∏nthak.png" type="Texture" id=2]

[node name="Brker" type="Node2D"]
script = ExtResource( 1 )
level_name = "Brker"

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1362.0
margin_bottom = 756.0
color = Color( 1, 0.819608, 0, 1 )

[node name="Opgave1" type="Button" parent="."]
margin_left = 61.0
margin_top = 105.0
margin_right = 311.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 157, 95 )
text = "Opgave 1"

[node name="Opgave2" type="Button" parent="."]
margin_left = 395.0
margin_top = 103.0
margin_right = 645.0
margin_bottom = 253.0
text = "Opgave 2"

[node name="Button3" type="Button" parent="."]
margin_left = 719.0
margin_top = 107.0
margin_right = 969.0
margin_bottom = 257.0
text = "Opgave 3"

[node name="CompleteOpg1" type="Sprite" parent="."]
visible = false
position = Vector2( 274, 222 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 2 )

[connection signal="pressed" from="Opgave1" to="." method="_on_Opgave1_pressed"]
[connection signal="pressed" from="Opgave2" to="." method="_on_Opgave2_pressed"]
